# platform-ffi_common

./: .gitignore  Cargo.toml  Changelog.md  README.md  build.rs
.cargo/: config.toml
.github/workflows/: security-audit.yml  test.yml
ffi_common/: Cargo.toml  Changelog.md  build.rs
ffi_common/src/: codegen_helpers.rs  datetime.rs  error.rs  lib.rs  macros.rs  string.rs
ffi_common/tests/: associated_value_enums.rs  derive_with_custom.rs  description_attribute.rs  generic_attribute.rs  memory.rs  no_compile.rs  remote_types.rs  struct_field_access.rs  trait_impl.rs  tuple_structs.rs
ffi_common/tests/custom_ffi/: ffi.rs  types.rs
ffi_common/tests/no_compile/: no_memberwise_init.rs  no_memberwise_init.stderr
ffi_consumer/: Cargo.toml
ffi_consumer/src/: consumer_enum.rs  consumer_struct.rs  error.rs  lib.rs  primitives_conformance.rs
ffi_consumer/support/swift/: Date.swift  Protocols.swift  RustError.swift  String.swift
ffi_core/: Cargo.toml  build.rs
ffi_core/src/: datetime.rs  lib.rs  macros.rs  string.rs
ffi_derive/: Cargo.toml  Changelog.md  build.rs  example.md
ffi_derive/src/: enum_ffi.rs  field_ffi.rs  lib.rs  parsing.rs  struct_ffi.rs
ffi_derive/tests/: derive_with_custom.rs  memory.rs  remote_types.rs  struct.rs  struct_field_access.rs  trait_impl.rs
ffi_derive/tests/custom_ffi/: ffi.rs
ffi_internals/: Cargo.toml
ffi_internals/src/: alias_resolution.rs  consumer.rs  field_ffi.rs  impl_internals.rs  items.rs  lib.rs  native_type_data.rs  parsing.rs  struct_ffi.rs  struct_internals.rs  type_ffi.rs
ffi_internals/src/consumer/: consumer_enum.rs  consumer_fn.rs  consumer_impl.rs  consumer_struct.rs  error.rs  primitives_conformance.rs
ffi_internals/src/consumer/consumer_enum/: complex_enum.rs  repr_c_enum.rs
ffi_internals/src/consumer/consumer_struct/: custom.rs  standard.rs
ffi_internals/src/impl_internals/: fn_ffi.rs  impl_ffi.rs
ffi_internals/src/items/: enum_ffi.rs  field_ffi.rs  fn_ffi.rs  impl_ffi.rs  struct_ffi.rs
ffi_internals/src/items/enum_ffi/: complex.rs  reprc.rs
ffi_internals/src/items/struct_ffi/: custom.rs  standard.rs
ffi_internals/src/parsing/: field_attributes.rs  fn_attributes.rs  impl_attributes.rs  struct_attributes.rs  type_attributes.rs
ffi_internals/src/struct_internals/: enum_ffi.rs  field_ffi.rs  struct_ffi.rs
ffi_internals/support/swift/: Date.swift  Protocols.swift  RustError.swift  String.swift
src/: error.rs  ffi.rs  lib.rs  memory.rs
