[package]
name = "ffi_common"
version = "0.4.0"
authors = ["Nicholas Smillie <nicholas@agrian.com>"]
edition = "2018"
publish = ["agrian-registry"]
repository = "https://github.com/agrian-inc/ffi_common"

[dependencies]
ffi_consumer = { version = "0.4", registry = "agrian-registry" }
ffi_core = { version = "0.4", registry = "agrian-registry" }
ffi_derive = { version = "0.3.99", registry = "agrian-registry" }

[lib]
crate-type = ["staticlib", "rlib"]
