[package]
name = "ffi_consumer"
version = "0.1.0"
authors = ["Nicholas Smillie <nicholas@agrian.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ffi_common = { path = "../ffi_common" }
ffi_internals = { path = "../ffi_internals" }
heck = "0.3"
syn = { version = "1.0", features = ["full"] }
