[package]
name = "ffi_core"
version = "0.7.0"
authors = ["Nicholas Smillie <nicholas@agrian.com>"]
edition = "2018"
publish = ["agrian-registry"]
repository = "https://github.com/agrian-inc/ffi_common"

[dependencies]
chrono = "0.4"
paste = "1.0.0"
thiserror = "1.0"
uuid = { version = "0.8", features = ["v4"] }

[lib]
crate-type = ["staticlib", "rlib"]
