[package]
name = "ffi_derive"
version = "0.3.0"
authors = ["Nicholas Smillie <nicholas@agrian.com>"]
edition = "2018"
repository = "https://github.com/agrian-inc/ffi_common"

[lib]
proc-macro = true

[dependencies]
ffi_consumer = { version = "0.3", registry = "agrian-registry" }
ffi_internals = { version = "0.3", registry = "agrian-registry" }
proc-macro2 = "1.0"

[build-dependencies]
ffi_consumer = { version = "0.3", registry = "agrian-registry" }

[dev-dependencies]
ffi_common = { version = "0.3", registry = "agrian-registry" }
chrono = "0.4"
uuid = { version = "0.8", features = ["v4"] }
