[package]
name = "ffi_derive"
version = "0.4.1"
authors = ["Nicholas Smillie <nicholas@agrian.com>"]
edition = "2018"
publish = ["agrian-registry"]
repository = "https://github.com/agrian-inc/ffi_common"

[lib]
proc-macro = true

[dependencies]
ffi_consumer = { version = "0.4.1", registry = "agrian-registry" }
ffi_internals = { version = "0.4.1", registry = "agrian-registry" }
proc-macro2 = "1.0"

[build-dependencies]
ffi_consumer = { version = "0.4.1", registry = "agrian-registry" }
